--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <title>etch-a-sketch</title>
 </head>
 <body>
-  
+  <select id="size">
+    <option value="16x16">16x16</option>
+    <option value="32x32">32x32</option>
+    <option value="64x64">64x64</option>
+  </select>
+  <button id="reset-btn">reset</button>
   <script src="script.js"></script>
 </body>
 </html>
