--- a/test1.html
+++ b/test1.html
@@ -3,76 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>16x16 Flexbox Grid Example</title>
+  <title>Resizable Button</title>
   <style>
-    .container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 5px; /* Optional: Add gap between grid items for spacing */
-    }
-
-    .box {
-      width: calc(100% / 16 - 10px); /* Adjust as needed, subtracting margin */
-      height: 20px; /* Adjust as needed */
-      background-color: lightblue;
-      margin: 5px; /* Optional: Add margin between grid items for spacing */
+    #resizableButton {
+      width: 100px;
+      height: 50px;
+      background-color: #3498db;
+      color: #fff;
+      border: none;
+      cursor: ew-resize; /* Set cursor to indicate horizontal resizing */
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <!-- Repeat this div 16x16 times -->
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    
-    <!-- Add more divs as needed -->
-  </div>
+  <button id="resizableButton">Resize me</button>
+
+  <script>
+    const button = document.getElementById('resizableButton');
+    let isResizing = false;
+    let initialX;
+
+    button.addEventListener('mousedown', (event) => {
+      isResizing = true;
+      initialX = event.clientX;
+    });
+
+    document.addEventListener('mousemove', (event) => {
+      if (isResizing) {
+        const width = button.offsetWidth + (event.clientX - initialX);
+        button.style.width = `${width}px`;
+        initialX = event.clientX;
+      }
+    });
+
+    document.addEventListener('mouseup', () => {
+      isResizing = false;
+    });
+  </script>
 
 </body>
 </html>
