--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
   <title>etch-a-sketch</title>
 </head>
 <body>
-  <select id="size">
-    <option value="16x16">16x16</option>
-    <option value="32x32">32x32</option>
-    <option value="64x64">64x64</option>
-  </select>
-  <button id="reset-btn">reset</button>
+  <h1>Etch-a-sketch</h1>
+
+  <div class="container">
+    <div class="toolsContainer">
+      <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+      <p>Size: <span id="demo"></span></p>
+
+      <button id="eraser">eraser</button>
+      <button id="reset-btn">reset</button>
+
+      <input type="color" id="colorPicker" value="#000000">
+    </div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
