updated rainbow mode and eraser

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <p>Size: <span id="demo"></span></p>
 
       <button id="eraser">eraser</button>
+      <button id="randomColor-btn">rainbow mode</button>
       <button id="reset-btn">reset</button>
-
       <input type="color" id="colorPicker" value="#000000">
     </div>
   </div>
