--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>etch-a-sketch</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>Etch-a-sketch</h1>
@@ -23,4 +26,11 @@
 
   <script src="script.js"></script>
 </body>
+<footer>
+  <p href="https://github.com/willnguyen0903" target="_blank">© 2023 Will Nguyen  
+    <a href="https://github.com/willnguyen0903/calculator" target="_blank">
+      <img src="images/github_logo.png" alt="GitHub Logo" id="logo">
+    </a>
+  </p>
+</footer>
 </html>
